tests/error/duplicate_struct_field.magi
// TEST: Duplicate struct field in literal should error

Point :: struct { x: i32, y: i32 }

main :: () -> i32 {
    p := Point.{ x = 1, y = 2, x = 3 }
    return 0
}
